# multiplayer-side-scroller

./: .gitignore  README.md  main.py  pyproject.toml
client/: main.py
shared/: config.py
