[project]
name = "multiplayer-side-scroller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "pydantic>=2.13.4",
    "pygame-ce>=2.5.7",
    "uvicorn[standard]>=0.51.0",
    "websockets>=16.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
